--- a/image/config/config.yaml.template
+++ b/image/config/config.yaml.template
@@ -21,7 +21,7 @@ clair:
       # PostgreSQL Connection string
       # https://www.postgresql.org/docs/current/static/libpq-connect.html#LIBPQ-CONNSTRING
       # source: postgres://postgres:password@postgres:5432/postgres?sslmode=disable
-      source: postgres://"${POSTGRES_USERNAME}":"${POSTGRES_PASSWORD}"@"${POSTGRES_IP}":${POSTGRES_PORT}/"${POSTGRES_DATABASE}"?sslmode=disable
+      source: postgres://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_IP}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?sslmode=disable
 
       # Number of elements kept in the cache
       # Values unlikely to change (e.g. namespaces) are cached in order to save prevent needless roundtrips to the database.
